--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Basic json configuration loader for NodeJS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test_main.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/giuliojiang/rawconf#readme",
   "dependencies": {
     "async": "^2.3.0",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "jassert.js": "0.0.2"
   }
 }
